third_party/move/move-compiler-v2/tests/checking-lang-v1/loop_labels.exp

Diagnostics:
error: unsupported language construct
  ┌─ tests/checking-lang-v1/loop_labels.move:3:9
  │
3 │         'outer: loop {
  │         ^^^^^^ loop labels are not enabled before version 2.1

error: unsupported language construct
  ┌─ tests/checking-lang-v1/loop_labels.move:6:17
  │
6 │                 'inner: loop if (true) loop {
  │                 ^^^^^^ loop labels are not enabled before version 2.1

error: unsupported language construct
  ┌─ tests/checking-lang-v1/loop_labels.move:7:41
  │
7 │                     if (false) continue 'outer else break 'inner;
  │                                         ^^^^^^ loop labels are not enabled before version 2.1

error: unsupported language construct
  ┌─ tests/checking-lang-v1/loop_labels.move:7:59
  │
7 │                     if (false) continue 'outer else break 'inner;
  │                                                           ^^^^^^ loop labels are not enabled before version 2.1

error: unsupported language construct
  ┌─ tests/checking-lang-v1/loop_labels.move:9:33
  │
9 │                 } else continue 'outer
  │                                 ^^^^^^ loop labels are not enabled before version 2.1
